flux/apps/ext/headscale/deployment.yaml
---
# Deployment
apiVersion: apps/v1
kind: Deployment
metadata:
  name: headscale
  labels:
    app: headscale
spec:
  replicas: 1
  selector:
    matchLabels:
      app: headscale
  strategy:
    type: Recreate   # Required with ReadWriteOnce PVC
  template:
    metadata:
      labels:
        app: headscale
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 1000
        fsGroup: 1000
      shareProcessNamespace: true
      containers:
        - name: headscale
          image: headscale/headscale:0.29.4  # pin to a specific tag in production
          imagePullPolicy: IfNotPresent
          args: ["serve"]
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
            - name: metrics
              containerPort: 9090
              protocol: TCP
            - name: stun
              containerPort: 30478
              protocol: UDP
              hostPort: 30478
          volumeMounts:
            - name: headscale-config
              mountPath: /etc/headscale/config.yaml
              subPath: config.yaml
              readOnly: true
            - name: headscale-acl
              mountPath: /etc/headscale/policy.json
              subPath: policy.json
              readOnly: true
            - name: headscale-data
              mountPath: /var/lib/headscale
            - name: socket-temp # needed to overcome a "creating directory failed with permission error: /var/run/headscale" error
              mountPath: /var/run/headscale
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 500m
              memory: 256Mi

        - name: headplane # Headplane (web management UI) must be in the same pod with Headscale for integration to work properly
          image: ghcr.io/tale/headplane:0.7.1
          imagePullPolicy: IfNotPresent
          ports:
            - name: ui
              containerPort: 3000
              protocol: TCP
          volumeMounts:
            - name: headplane-config
              mountPath: /etc/headplane/config.yaml
              subPath: config.yaml
              readOnly: true
            - name: headscale-config
              mountPath: /etc/headscale/config.yaml
              subPath: config.yaml
              readOnly: true
            - name: headplane-data
              mountPath: /var/lib/headplane
      volumes:
        - name: headscale-config
          configMap:
            name: headscale-config
        - name: headscale-acl
          configMap:
            name: headscale-acl
        - name: headscale-data
          persistentVolumeClaim:
            claimName: headscale-data
        - name: socket-temp
          emptyDir: {}

        - name: headplane-config
          configMap:
            name: headplane-config
        - name: headplane-data
          persistentVolumeClaim:
            claimName: headplane-data
