flux/apps/ext/headscale/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: headscale
spec:
  selector:
    app: headscale
  type: ClusterIP
  ports:
    - name: http
      port: 8080
      targetPort: http
      protocol: TCP

    - name: ui
      port: 3000
      targetPort: ui
      protocol: TCP

    - name: metrics
      port: 9090
      targetPort: metrics
      protocol: TCP

    # STUN UDP port is defined in the deployment itself as a hostPort, not here
