flux/apps/ext/headscale/httproute.yaml
---
# / - Tailscale control protocol
# /derp - DERP relay WS
# /derp/latency-check - DERP health probe
# /health - headscale health endpoint
# /verify - DERP client verification
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headscale
spec:
  parentRefs:
    - name: traefik-gateway
      kind: Gateway
      namespace: traefik-ext
  hostnames:
    - headscale.lab.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: headscale
          port: 8080
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: middleware-chain
      timeouts:
        request: 0s
        backendRequest: 0s
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: headplane
spec:
  parentRefs:
    - name: traefik-gateway
      kind: Gateway
      namespace: traefik-ext
  hostnames:
    - headscale.lab.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /admin
      backendRefs:
        - name: headscale
          port: 3000
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: middleware-chain
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: middleware-chain
spec:
  chain:
    middlewares:
      - name: bouncer
        namespace: traefik-ext
      # protected by OIDC, don't use auth middleware here
